Updated demo plugin to new gradle structure and MCreator 2024.1